# syntactic_loss

./: Untitled.ipynb  pyproject.toml
ccg_trans/: ccg.py  loss.py  old.py  psg.py  solver.py  test.py  translate.py
ccg_trans/utils/: tree.py  utils.py
